[package]
name = "Fourier_Transform"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["Daksh Kaul", "daksh <dakshkaul7790@gmail.com>"]
readme  = "README.md"

description = "An implementation of Discrete Fourier Transform."

[dependencies]
num-complex = "0.4.6"
plotly = "0.10.0"

[package.metadata.docs.rs]
features = ["default"]
